--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,28 @@
 {
     "nuxtr.defaultPackageManager": "pnpm",
+    "editor.gotoLocation.multipleDefinitions": "goto",
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/node_modules": true,
+        "**/.wrangler": true,
+        "**/.nuxt": true,
+        "**/.data": true,
+        "**/.output": true,
+        "**/dist": true,
+    },
+    "tailwindCSS.experimental.classRegex": [
+        "tw`(.*?)`",
+        "tw\\('(.*?)'\\)",
+        "tw\\(\\s*('(.*?)'|\"(.*?)\")\\s*\\)"
+    ],
+    "files.associations": {
+        "*.css": "tailwindcss"
+    },
+    "editor.quickSuggestions": {
+        "strings": true
+    }
 }
