--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify-json/material-symbols": "^1.2.17",
     "@nuxt/content": "3.4.0",
     "@nuxt/eslint": "1.3.0",
     "@nuxt/fonts": "0.11.1",
@@ -18,10 +19,13 @@
     "@nuxt/scripts": "0.11.5",
     "@nuxtjs/color-mode": "3.5.2",
     "@nuxtjs/tailwindcss": "6.13.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@unhead/vue": "^2.0.0-rc.8",
-    "daisyui": "^5.0.13",
+    "daisyui": "^5.0.16",
+    "dayjs-nuxt": "2.1.11",
     "eslint": "^9.0.0",
     "nuxt": "^3.16.2",
+    "tailwindcss": "^3.4.17",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
