Switch to flex instead of grid

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,9 +20,11 @@
         "tw\\(\\s*('(.*?)'|\"(.*?)\")\\s*\\)"
     ],
     "files.associations": {
-        "*.css": "tailwindcss"
+        "*.css": "tailwindcss",
+        "*.md": "mdc"
     },
     "editor.quickSuggestions": {
         "strings": true
-    }
+    },
+    "vue.server.hybridMode": true
 }
