--- a/package.json
+++ b/package.json
@@ -27,15 +27,17 @@
     "nuxt": "^3.16.2",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "wrangler": "^4.9.1"
   },
   "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild",
       "@parcel/watcher",
       "better-sqlite3",
-      "sharp"
+      "esbuild",
+      "sharp",
+      "workerd"
     ]
   }
 }
